--- a/catalog/view/theme/toys/template/common/header.twig
+++ b/catalog/view/theme/toys/template/common/header.twig
@@ -99,7 +99,7 @@
             <li>
               <a href="{{ login }}">
                 <img src="./image/catalog/toys-store/header/login.svg" alt="login">
-                <span>{{ text_login }}</span></a> /  
+                {{ text_login }}</a> /  
               <a href="{{ register }}">{{ text_register }}</a>  
             </li>
             {% endif %}
@@ -109,7 +109,7 @@
         <li>
           <a href="{{ shopping_cart }}" title="{{ text_shopping_cart }}">
             <img src="./image/catalog/toys-store/header/shopping_cart.svg" alt="shopping_cart">
-            <span>{{ text_shopping_cart }}</span>
+            {{ text_shopping_cart }}
           </a>
         </li>
       </ul>
