--- a/catalog/view/theme/toys/template/extension/module/aboutus.twig
+++ b/catalog/view/theme/toys/template/extension/module/aboutus.twig
@@ -1,4 +1,4 @@
-<div class="aboutUs my-container">
+<section class="aboutUs my-container">
     {% if heading_title %}
     <h2>{{ heading_title }}</h2>
     {% endif %}
@@ -19,4 +19,4 @@
             <div class="about-us__button btn_orange">Подробнее</div>
         </div>
     </div>
-</div>
+</section>
