--- a/catalog/view/theme/toys/template/common/home.twig
+++ b/catalog/view/theme/toys/template/common/home.twig
@@ -1,4 +1,6 @@
 {{ header }}
-{{ content_top }}
-{{ content_bottom }}
+<main>
+    {{ content_top }}
+    {{ content_bottom }}
+</main>
 {{ footer }}
