--- a/catalog/view/theme/toys/template/extension/module/aboutus.twig
+++ b/catalog/view/theme/toys/template/extension/module/aboutus.twig
@@ -11,9 +11,9 @@
                    производству развивающих деревянных игрушек.</p>
             <a href="#" class="about-us__button btn_orange">Подробнее</a>
         </div>
-        <div style="background-image: url(./image/catalog/toys-store/home-page/about_us/1.png)" class="about-us-img"></div>
+        <div style="background-image: url(./image/catalog/toys-store/home-page/about_us/1.jpg)" class="about-us-img"></div>
         
-        <div style="background-image: url(./image/catalog/toys-store/home-page/about_us/2.png)" class="about-us-img"></div>
+        <div style="background-image: url(./image/catalog/toys-store/home-page/about_us/2.jpg)" class="about-us-img"></div>
         <div class="about-us__item">
             <p>При изготовлении игрушек используются только материаллы высочайшего качества При изготовлении игрушек используются только материаллы высочайшего качества При изготовлении игрушек используются только материаллы высочайшего качества При изготовлении игрушек используются только материаллы высочайшего качества </p>
             <div class="about-us__button btn_orange">Подробнее</div>
