--- a/catalog/view/theme/toys/template/extension/module/carousel.twig
+++ b/catalog/view/theme/toys/template/extension/module/carousel.twig
@@ -19,6 +19,7 @@
     <div class="carousel__arrow manufactures__arrow_prev"></div>
     <div class="carousel__arrow manufactures__arrow_next"></div>
   </div>
+  <div class="manufactures__video"></div>
 </section>
 <script type="text/javascript"><!--
 $('#carousel{{ module }}').swiper({
